--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.0",
+    "react-sweetalert2": "^0.6.0",
     "sass": "^1.69.5"
   },
   "devDependencies": {
