--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "firebase": "^10.7.1",
     "leaflet": "^1.9.4",
+    "mui-one-time-password-input": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
