--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.0",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.1.0",
+    "big.js": "^6.2.1",
     "firebase": "^10.7.1",
     "leaflet": "^1.9.4",
     "mui-one-time-password-input": "^2.0.3",
