--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.0",
     "@react-google-maps/api": "^2.19.3",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
@@ -31,7 +33,8 @@
     "react-router-dom": "^6.21.0",
     "react-sweetalert2": "^0.6.0",
     "sass": "^1.69.5",
-    "sweetalert2": "^11.12.3"
+    "sweetalert2": "^11.12.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
